1999-10-18  Havoc Pennington  <hp@pobox.com>

	* Makefile.am (SUBDIRS): Remove "macros"

	* configure.in: Don't use GNOME_INIT, handle case where we are
	inside gnome-libs. AM_PATH_GTK for the GIF test

	* src/Makefile.am: Change flags to work without libgnomeui,
	comment out testpixbuf for now

1999-10-18  Federico Mena Quintero  <federico@redhat.com>

	* configure.in: Use $GTK_LIBS as the extra libs when checking for
	libgif/libungif, as they need the X libraries.  Fixes bug #2472.

1999-10-10  Cody Russell  <bratsche@dfw.net>
	* src/gdk-pixbuf-drawable.c: core function now determines whether
	the requested geometry is on screen or not, and if some is not
	then the request is clamped to geometry that is on the screen.

	Changed 'pixbuf' to 'art_pixbuf' in core function.

1999-10-08  Michael Fulbright  <drmike@redhat.com>

	* src/gdk-pixbuf-data.c: Added to load rgb data from const data.

	* src/testpifbuf: Changed test program to display cdrom from rgb data
	if no filename given to test program.

1999-10-07  Cody Russell  <bratsche@dfw.net>
	* src/gdk-pixbuf-drawable.[ch]: Added. (Actually, Miguel committed
	them, but I wrote them).

	* src/gdk-pixbuf-drawable.h: Added a missing ; so things will now
	compile.

	* src/Makefile.am: Added gdk-pixbuf-drawable.[ch] to
	libgdk_pixbuf_la_SOURCES and libgdk_pixbufinclude_HEADERS.

	* src/gdk-pixbuf-drawable.c: Added #include "gdk-pixbuf-drawable.h"
	to fix compilation.

	* src/gdk-pixbuf-drawable.[ch]: Changed functions to return
	GdkPixBuf* instead of ArtPixBuf*.

1999-09-22  Michael Meeks  <michael@nuclecu.unam.mx>

	* src/gdk-pixbuf.c (gdk_pixbuf_new): created.
	(gdk_pixbuf_scale): use gdk_pixbuf_new + return a new scaled image.

	* src/gdk-pixbuf.h (struct _GdkPixBuf): Re-organise struct, + add
	GdkPixBufUnrefFunc + gdk_pixbuf_new.

	* src/io-jpeg.c (image_load): clean to use gdk_pixbuf_new.

	* src/io-xpm.c (_pixbuf_create_from_xpm): ditto.

	* src/io-tiff.c (image_load): ditto + fix leak
